# wasmcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURE_FLAGGED_SERVER_PLAN.md  GOVERNANCE.md  JWT_CONFIGURATION.md  LICENSE  MAINTAINERS.md  Makefile  PLATFORM_ARCHITECTURE.md  PUBLISHING.md  README.md  SECURITY.md  TESTING.md  TESTING_QUICK_START.md  WIT_ARCHITECTURE.md  WIT_REGISTRY_COMPOSITION_PLAN.md  WIT_UPDATE_COMPLETE.md  WIT_UPDATE_PLAN.md  clippy.toml  fastertools:mcp@0.1.1.wasm  fastertools:mcp@0.1.4.wasm  install.sh  mcp:protocol@0.1.0.wasm  package-lock.json  package.json  run-server.sh  run-with-config.sh  run-with-jwt.sh  rustfmt.toml  test-auth-server.wac  test-install-functions.sh  test-jwt.py  transport-composition.wac  versions.toml  wasmtime-runner.toml
cli/: Cargo.toml  Makefile  README.md  dev-server.sh  test-mcp.sh  versions.toml
cli/.cargo/: config.toml
cli/scripts/: test-linux.sh
cli/src/: compose.rs  lib.rs  logging.rs  main.rs  pkg.rs  scaffold.rs  types.rs
cli/src/commands/: mod.rs  pkg.rs  scaffold.rs
cli/src/compose/: dependencies.rs  graph.rs  mod.rs  profiles.rs  resolution.rs  wrapping.rs
cli/src/config/: io.rs  mod.rs  paths.rs  schema.rs  utils.rs
cli/src/mcp/: mod.rs  server.rs
cli/src/state/: mod.rs
cli/src/versioning/: mod.rs
cli/templates/python/: Makefile  README.md  app.py
cli/templates/python-prompts/: Makefile  README.md  app.py
cli/templates/python-resources/: Makefile  README.md  app.py
cli/templates/python-tools/: README.md  app.py
cli/templates/rust/: Cargo.toml  Makefile  README.md
cli/templates/rust-prompts/: Cargo.toml.template  README.md
cli/templates/rust-resources/: Cargo.toml.template  README.md
cli/templates/rust-routing-config/: Makefile  README.md  routing.toml.template
cli/templates/rust-tools/: README.md
cli/templates/typescript/: Makefile  README.md  package.json
cli/templates/typescript-prompts/: Makefile  README.md  webpack.config.js
cli/templates/typescript-resources/: .gitignore  README.md  webpack.config.js
cli/templates/typescript-tools/: README.md  tsconfig.json  webpack.config.js
cli/tests/: mcp_server.rs  registry_commands.rs
cli/tests/common/: mod.rs
components/authorization/: Cargo.toml  Makefile  README.md  WIT_DEPS.md
components/authorization/policies/: default.rego  rbac.rego  tool-authorization.rego
components/authorization/src/: bindings.rs  config.rs  discovery.rs  error.rs  jwt.rs  lib.rs  mcp.rs  policy.rs
components/authorization/wit/: capabilities.wit  elicitation.wit  prompts.wit  world.wit
components/http-transport/: Cargo.toml  Makefile  README.md
components/http-transport/src/: adapter.rs  auth.rs  auth_types.rs  bindings.rs  constants.rs  discovery.rs  error.rs  jwt.rs  lib.rs  mcp_impl.rs  policy.rs  provider.rs  type_implementations.rs
components/null-prompts/: Cargo.toml
components/null-prompts/src/: bindings.rs  lib.rs
components/null-prompts/wit/: world.wit
components/null-resources/: Cargo.toml
components/null-resources/src/: bindings.rs  lib.rs
components/null-resources/wit/: world.wit
components/otel-exporter/: Cargo.toml
components/otel-exporter/src/: bindings.rs  config.rs  lib-full.rs.bak  lib.rs  minimal.rs  variant_config.rs
components/otel-exporter/wit/: otel-exporter.wit  provider-config.wit
components/server/: Cargo.toml  Makefile  README.md  build-variants.sh  build.rs  handler.wasm  test-echo.json  test-weather.json
components/server/src/: adapter.rs  bindings.rs  lib.rs
components/server/wit/: world.wit
components/server/wit-variants/: server-basic.wit  server-full.wit  server-minimal.wit  server-prompts.wit  server-resources.wit  server-standard.wit  server-tools.wit
crates/authorization/: Cargo.toml
crates/authorization/src/: config.rs  helpers.rs  jwks.rs  jwt.rs  lib.rs  policy.rs  utils.rs
crates/authorization/wit/: deps.toml  world.wit
crates/context-provider/: Cargo.toml  Makefile
crates/context-provider/src/: context.rs  lib.rs
crates/context-provider/wit/: deps.toml  world.wit
crates/error-writer/: Cargo.toml  Makefile
crates/error-writer/src/: bindings.rs  lib.rs
crates/error-writer/wit/: world.wit
crates/http-transport/: Cargo.toml  Makefile  README.md  delete_old_serializer.sh
crates/http-transport/src/: bindings.rs  capabilities.rs  config.rs  constants.rs  error.rs  http.rs  lib.rs  parser.rs  parser_test.rs  response.rs  serializer.old  serializer.rs  serializer_old_to_remove.rs  session.rs  stream_reader.rs  task_local.rs  validation.rs
crates/http-transport/wit/: deps.toml  world.wit
crates/http-transport/wit-draft2/: deps.toml  world.wit
crates/initialize-handler/: Cargo.toml  Makefile
crates/initialize-handler/src/: bindings.rs  lib.rs
crates/initialize-handler/wit/: world.wit
crates/initialize-writer/: Cargo.toml  Makefile
crates/initialize-writer/src/: bindings.rs  lib.rs
crates/initialize-writer/wit/: world.wit
crates/jwt-auth/: Cargo.toml
crates/jwt-auth/src/: config.rs  error.rs  jwks.rs  jwt.rs  lib.rs  policy.rs
crates/jwt-auth/tests/: jwt_tests.rs
crates/jwt-auth/wit/: deps.toml  world.wit
crates/mcp-lib/: Cargo.toml
crates/mcp-lib/src/: bindings.rs  get_prompt_result.rs
crates/mcp-lib/wit/: world.wit
crates/mcp-type-impls/: Cargo.toml
crates/mcp-type-impls/src/: bindings.rs  complete_result.rs  (+3 more)
crates/messages/: Cargo.toml
crates/otel-trace/: Cargo.toml  Makefile
crates/otel-tracing-middleware/: Cargo.toml  Makefile  build.rs
crates/otel-transport/: Cargo.toml  Makefile
crates/protocol-integration-tests/: Cargo.toml  MEMORY_TESTING.md  README.md  compose.wac
crates/request/: Cargo.toml  Makefile
crates/resources-writer/: Cargo.toml  Makefile
crates/stdio-transport/: Cargo.toml  Makefile
crates/tools-writer/: Cargo.toml  Makefile
crates/wasmcp/: Cargo.toml
crates/wasmcp-core/: Cargo.toml
crates/wit-resource-registry/: Cargo.toml  README.md
test-mcp-handler/: Cargo.toml  Makefile  README.md  spin.toml
test-mcp-handler/src/: bindings.rs
test-mcp-handler/wit/: world.wit
(+1461 files in other folders)
