# Root workspace for WebAssembly components only
# CLI is excluded - it's a standalone native binary

[workspace]
members = [
    "crates/*", "dev-tools",
]
exclude = [
    "cli",
    "cli/templates/*",
    "examples/*",
    "tmp/*",
    "crates/wit",
]
resolver = "2"

# Workspace-wide dependencies for all WebAssembly components
[workspace.dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Workspace-wide profile settings for all WebAssembly components
# panic = "abort" eliminates wasi:cli dependencies for panic infrastructure
[profile.release]
panic = "abort"
strip = true
lto = true
opt-level = "z"
