# Root workspace for WebAssembly components only
# CLI is excluded - it's a standalone native binary

[workspace]
members = [
    "crates/*",
]
exclude = [
    "cli",
    "cli/templates/*",
    "examples/*",
    "tmp/*",
    "crates/wit",
    "tools/dev",  # Development tool - builds natively outside workspace
    # Outdated crates pending removal
    "crates/http-server-io",
    "crates/http-transport",
    "crates/stdio-transport",
]
resolver = "2"

# Workspace-wide dependencies for all WebAssembly components
[workspace.dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
