[package]
name = "wasmcp"
version = "0.4.1"
edition = "2024"
rust-version = "1.89"
authors = ["wasmcp contributors"]
description = "CLI for scaffolding Model Context Protocol servers as WebAssembly components"
license = "Apache-2.0"
repository = "https://github.com/wasmcp/wasmcp"
keywords = ["mcp", "webassembly", "component-model", "wasi"]
categories = ["command-line-utilities", "development-tools", "wasm"]

# CLI is a standalone workspace (not part of parent workspace)
[workspace]

[[bin]]
name = "wasmcp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
liquid = "0.26"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
include_dir = "0.7"
wac-graph = "0.8"
wit-parser = "0.224"
wit-component = "0.224"
wasmparser = "0.224"
tokio = { version = "1", features = ["process", "rt", "rt-multi-thread", "macros", "fs", "io-util"] }
dirs = "5.0"
wasm-pkg-client = "0.9"
wasm-pkg-common = "0.9"
wasm-pkg-core = "0.9"
wit-deps = "0.5"
futures-util = "0.3"
serde_json = "1.0"
toml = "0.8"

# MCP server support (optional feature)
rmcp = { version = "0.8.2", features = ["server", "transport-io", "transport-streamable-http-server", "macros"], optional = true }
schemars = { version = "1.0", features = ["preserve_order"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }
axum = { version = "0.8", optional = true }
tokio-util = { version = "0.7", optional = true }

[features]
default = []
server = ["rmcp", "schemars", "tracing-subscriber", "axum", "tokio-util"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
