[package]
name = "test_mcp_handler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmcp-macros = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = "4.0"
spin-executor = "4.0"
url = "2.5"
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }

[package.metadata.component]
package = "test-mcp-handler:component"

[package.metadata.component.bindings]
derives = ["serde::Serialize", "serde::Deserialize", "Clone"]
pub_export_macro = true

[package.metadata.component.target]
path = "wit"
world = "mcp-server"

[package.metadata.component.target.dependencies]
"fastertools:mcp" = "0.1.1"

[profile.release]
# Optimize for small binary size
opt-level = "s"
lto = true
strip = true