[package]
name = "null_prompts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }

[package.metadata.component]
package = "fastertools:null-prompts"

[package.metadata.component.bindings]
derives = ["Clone"]

[package.metadata.component.target]
path = "wit"
world = "null-prompts"

[package.metadata.component.target.dependencies]
"fastertools:mcp" = "0.1.1"