[package]
name = "null_resources"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }

[package.metadata.component]
package = "fastertools:null-resources"

[package.metadata.component.bindings]
derives = ["Clone"]

[package.metadata.component.target]
path = "wit"
world = "null-resources"

[package.metadata.component.target.dependencies]
"fastertools:mcp" = "0.1.1"