[package]
name = "otel-exporter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spin-sdk = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
opentelemetry = { version = "0.30", default-features = false, features = ["trace"] }
opentelemetry-proto = { version = "0.7", default-features = false, features = ["trace", "gen-tonic-messages"] }
prost = { version = "0.13", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wasmcp:otel-exporter"

[package.metadata.component.bindings]
derives = ["Clone"]

[package.metadata.component.target]
path = "wit"
world = "otel-exporter"

[package.metadata.component.target.dependencies]
"wasi:otel" = { path = "wit/deps/wasi-otel.wit" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }