[package]
name = "wasmcp_server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }
rmcp = { version = "0.5", default-features = false, features = ["server", "macros", "base64"] }

[package.metadata.component]
package = "wasmcp:server"

[package.metadata.component.target]
path = "wit"
world = "mcp-server"

[package.metadata.component.target.dependencies]
"mcp:protocol" = { path = "wit/deps/mcp" }

[workspace]