[package]
name = "wasmcp_server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }
rmcp = { version = "0.5", default-features = false, features = ["server", "macros", "base64"] }

[features]
default = ["tools"]

# Handler capabilities - choose which handlers this server will support
tools = []
resources = []
prompts = []
sampling = []
elicitation = []
roots = []
completion = []

# Common combinations
basic = ["tools", "resources"]
standard = ["tools", "resources", "prompts"]
full = ["tools", "resources", "prompts", "sampling", "elicitation", "roots", "completion"]

# Transport features
sse = []  # Server-Sent Events for subscriptions and notifications

# State management (future)
# sessions = ["dep:wasi-keyvalue"]  # Stateful session support

[package.metadata.component]
package = "wasmcp:server"

[package.metadata.component.bindings]
derives = ["serde::Serialize", "serde::Deserialize", "Clone"]

[package.metadata.component.target]
path = "wit"
# World is always "server" but the WIT file is dynamically selected based on features
world = "server"

[package.metadata.component.target.dependencies]
"fastertools:mcp" = "0.1.4"

[workspace]