[package]
name = "authorization"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen = "0.48.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto", "use_pem"] }
url = "2.5"
regorus = { version = "0.4", default-features = false, features = ["base64", "base64url"] }
base64 = "0.22"
urlencoding = "2.1"

[lib]
crate-type = ["cdylib"]
