[package]
name = "error-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wasmcp:error-writer"
target = "wasmcp:mcp/error-writer@0.3.0-alpha.59"

[package.metadata.component.dependencies]

