[package]
name = "error-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = "0.34"
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wasmcp:error-writer"
target = "wasmcp:mcp/error-writer@0.3.0"

[package.metadata.component.dependencies]

