[package]
name = "http-transport"
version = "0.1.4"
edition = "2021"

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[dev-dependencies]
serde_json = "1.0"

[features]
integration-tests = []
draft2 = []

[lib]
crate-type = ["cdylib"]
