[package]
name = "jwt-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
url = "2.5"
regorus = { version = "0.4", default-features = false, features = ["base64", "base64url"] }

[lib]
crate-type = ["cdylib"]
