[package]
name = "jwt-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
jsonwebtoken = "9.3"
url = "2.5"
regorus = { version = "0.4", default-features = false, features = ["base64", "base64url"] }

[lib]
crate-type = ["cdylib"]
