[package]
name = "mcp-lib"
version = "0.3.0-alpha.24"
edition = "2024"
rust-version = "1.89"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[package.metadata.component]
package = "wasmcp:mcp-lib"

[package.metadata.component.target]
path = "wit"
world = "mcp-lib"

[package.metadata.component.target.dependencies]
"wasmcp:mcp" = { version = "0.3.0-alpha.24" }
