[package]
name = "otel-trace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.36", features = ["default"] }
wit-resource-registry = { path = "../wit-resource-registry" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"
prost = "0.14"
bytes = "1.0"
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic-messages", "trace"], default-features = false }
thiserror = "2.0"

[profile.release]
opt-level = "z"
lto = true
strip = true