[package]
name = "otel-tracing-middleware"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.36", features = ["default"] }
wit-resource-registry = { path = "../wit-resource-registry" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
anyhow = "1"
wac-graph = "0.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
