[package]
name = "otel-transport"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.36", features = ["default"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
flate2 = "1.0"
zeroize = "1.8"

[profile.release]
opt-level = "z"
lto = true
strip = true