[package]
name = "protocol-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = "0.34"
serde_json = "1.0"
base64 = "0.22"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wasmcp:protocol-integration-tests"

[package.metadata.component.target]
path = "wit"
world = "test-harness"
