[package]
name = "stdio-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wasmcp:stdio-transport"
target = "wasmcp:mcp/stdio-transport@0.3.0"

[package.metadata.component.dependencies]
