[package]
name = "tools-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[dev-dependencies]
serde_json = "1.0"
base64 = "0.22"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wasmcp:tools-writer"
target = "wasmcp:mcp/tools-writer@0.3.0"

[package.metadata.component.dependencies]

