[package]
name = "wasmcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wasmcp"
path = "src/main.rs"

[dependencies]
wasmcp-core = { path = "../wasmcp-core", features = ["tools"] }
rmcp = { version = "0.6.3", features = ["server", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
axum = "0.8"
which = "6.0"
tempfile = "3.0"
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
chrono = "0.4"
once_cell = "1.20"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
